[package]
name = "quaternions_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quat_optimiz"
crate-type = ["cdylib"]


[dependencies]
ndarray = "0.15.3"
ndarray-linalg = { version = "*", features = ["intel-mkl-static"] }
argmin = { version = "0.4.7", features = ["ctrlc", "ndarrayl"] }
finitediff = { version = "0.1.4", features = ["ndarray"] }
rand = "0.8.4"
numpy = "0.14.1"

[dependencies.pyo3]
version = "0.14"
features = ["extension-module"]
